# wamr-freertos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dodo.py  openocd.cfg
buildfiles/: device.ld  device_f401.ld  device_f429.ld  nucleo_f429zi.resc
include/: FreeRTOSConfig.h  init.h
src/: init.c  main.c
